--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>AI Assistant</title>
 </head>
 <body>
-  <div>Hello world</div>
+  <div id="root"></div>
+  <script type="module" src="/src/popup/index.tsx"></script>
 </body>
 </html>
